# storymaster

./: .gitignore  CROSS_COMPILATION.md  GUIDE.md  JSON_IMPORT_README.md  LICENSE  LINUX_APPIMAGE_INSTALL.md  MACOS_INSTALL.md  README.md  SYNC_IMPLEMENTATION.md  TAB_NAVIGATION_GUIDE.md  TESTING.md  TESTING_IMPROVEMENTS.md  THIRD_PARTY_LICENSES.md  WINDOWS_SECURITY_NOTE.md  build_all.py  build_appimage.py  build_executable.py  build_executable_github.py  build_fast.py  build_macos.py  build_rpm.py  build_standalone.py  create_icons.py  create_version_info.py  import_from_json.py  import_world_building.py  init_database.py  install.py  install_appimage.sh  migrate_database.py  migrate_relationships.py  migrate_storyweaver_to_zip.py  minimal_comprehensive_seed.py  pyproject.toml  requirements.txt  response_1754176226653.json  response_1754176881048.json  run_comprehensive_tests.py  run_tests.py  runtime_hook_pyqt6.py  (+15 more)
assets/: storymaster.desktop  storymaster_icon_1024.icns
data/: sample_story.json
deploy/: README.md  install_sync_server.sh  storymaster-sync.service  uninstall_sync_server.sh
docs/: BUILD_GUIDE.md  INSTALL_SPELL_CHECK.md  README.md
scripts/: build_all.py  build_appimage.py  build_executable.py  build_linux.py  build_macos.py  build_rpm.py  build_verbose.py  build_windows.py  create_icns_only.py  create_macos_icon.py  create_version_info.py  export_to_json.py  hook-PyQt6.py  hook-PySide6.py  import_from_json.py  import_world_building.py  init_database.py  install.bat  install.sh  install_desktop_integration.py  migrate_arc_type_constraint.py  migrate_database.py  migrate_note_type_case.py  migrate_pairing_tokens.py  migrate_plot_section_type.py  migrate_relationships.py  migrate_sync_fields.py  migrate_sync_uuid.py  monitor_build.py  run_comprehensive_tests.py  run_tests.py  runtime_hook_pyqt6.py  runtime_hook_pyside6.py  runtime_hook_windows.py  test_pyqt_bundle.py  test_qt6_bundle.py  test_resources.py  version_info.py
storio/: main.py
storymaster/: __init__.py  main.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  seed.sql  temp_test.py  test_application_integration.py  test_character_arcs.py  test_common_model.py  test_conflict_serialization.py  test_database_schema.py  test_import_helper.py  test_main_controller.py  test_node_system.py  test_plot_management.py  test_qt_utils.py  test_simple_integration.py  test_sync_carlisle.py  test_sync_client.py  test_sync_conflicts.py  test_sync_server.py  (+7 more)
(+177 files in other folders)
